--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="#" data-page="about.md">About</a></li>
         <li><a href="#" data-page="contact.md">Contact</a></li>
       </ul>
+      <button id="dark-mode-toggle">Toggle Dark Mode</button>
     </nav>
     <main id="content">
       <p>Welcome! Select a page from the navigation to load its content.</p>
