--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <div class="container">
     <nav>
       <ul>
-        <li><a href="#" data-page="home.md">Home</a></li>
-        <li><a href="#" data-page="about.md">About</a></li>
-        <li><a href="#" data-page="contact.md">Contact</a></li>
+        <li><a href="#" data-page="home">Home</a></li>
+        <li><a href="#" data-page="about">About</a></li>
+        <li><a href="#" data-page="contact">Contact</a></li>
       </ul>
       <button id="dark-mode-toggle">Toggle Dark Mode</button>
     </nav>
