--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
 </head>
 <body>
   <header>
-    <h1>My Static Site</h1>
+    <div class="logo-area">
+      <img src="logo.png" alt="Logo"> <!-- Replace with your logo image -->
+    </div>
+    <div class="title-area">
+      <h1>My Static Site</h1>
+    </div>
   </header>
+  
   <div class="container">
     <nav>
       <ul>
@@ -24,6 +30,7 @@
       <p>Welcome! Select a page from the navigation to load its content.</p>
     </main>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
